src/test/deca/context/invalid/class_new_int.deca
//  Description : 
// 
//      Test incorrect qui utilise un new int
// 
//  Résultats :
// 
//      N/A 
// 
//  Historique : 
// 
//      Créé le 13/06 par gl03

class A {

}

{
    A oA = new int();
}